--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -29,7 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.4.0",
     "embla-carousel-react": "^8.0.0-rc22",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
@@ -39,6 +40,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-pdf": "^7.7.1",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
