--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-pdf": "^7.7.1",
+    "react-social-icons": "^6.16.0",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
