--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
+    "d3-shape": "^3.2.0",
     "date-fns": "^3.4.0",
     "embla-carousel-react": "^8.0.0-rc22",
     "lucide-react": "^0.358.0",
@@ -38,6 +39,7 @@
     "next-themes": "^0.2.1",
     "prettier-plugin-prisma": "^5.0.0",
     "react": "^18",
+    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-pdf": "^7.7.1",
