--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -32,7 +33,7 @@
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
     "d3-shape": "^3.2.0",
-    "date-fns": "^3.4.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.0-rc22",
     "lucide-react": "^0.358.0",
     "next": "14.1.0",
@@ -40,6 +41,7 @@
     "prettier-plugin-prisma": "^5.0.0",
     "react": "^18",
     "react-charts": "^3.0.0-beta.57",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-pdf": "^7.7.1",
